monitoring/tailsacale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-grafana-ingress
  namespace: monitoring
spec:
  defaultBackend:
    service:
      name: prometheus-grafana
      port:
        number: 80
  ingressClassName: tailscale
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-tailscale
  namespace: monitoring
  annotations:
    # Optional: Use this to customize the MagicDNS name 
    # (defaults to <ingress-name>-<namespace>)
    tailscale.com/hostname: "prometheus"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - prometheus # This will become prometheus.<your-tailnet>.ts.net
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
